--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@trpc/server": "^10.45.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "shadcn-ui": "file:.9.5",
     "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "tldraw": "^3.10.2",
     "zod": "^3.24.2"
   },
